--- a/index.html
+++ b/index.html
@@ -10,43 +10,91 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">  
   </head>
   <body>
-    <ul class="flexbox-2">
+    <header>
+      <img class="background" src="/images/QUECHUA ATHMOSPHERE   SOCIAL MEDIA  NEWSLETTER  ADVICES.jpg" alt="Deux personnes marchant dans la nature">
+      <div class="header-text">
+        <h1>Un chois infini grâce à Decathlon Partner!</h1>
+        <h2>Spécialement pour vous, nous avons choisi les meilleurs marques partenaires<br> afin de vous proposer une offre de qualité illimitée.</h2>
+      </div>
+    </header>
+    <div class="container">
+      <div class="item1">
+        <div class="titlebox">
+          <hr  class="title-orangebar">
+          <div class="title_text">
+            <h2>Decathlon Partner</h2>
+            <p>C'est quoi?</p>
+          </div>
+        </div>
+      </div>
+      <div class="item2">
+        <ul>
+          <li class="list-item">
+            <img src="images/icons/icons-services-badge.svg">
+            <p class="text-partner text1">Des <span>partenaires de confiance</span> qui respectent nos valeurs</p>
+          </li>
+          <li class="list-item">
+            <img src="images/icons/icons-delivery-purchase.svg">
+            <p class="text-partner text 2">Des partenaires proposant <span>leurs produits sur notre site web</span> et qui font partie intégrante de notre offre</p>
+          </li>
+          <li class="list-item">
+            <img src="images/icons/Groupe 155.svg">
+            <p class="text-partner text 3"><span>Un service client toujours au rendez-vous</span>, et qui reste votre point de contact unique, peu importe la provenance du produit</p>
+          </li>
+          <li class="list-item">
+            <img src="images/icons/icons-payment-payment.svg">
+            <p class="text-partner text 4">Des achats en une seule et <span>même transaction</span></p>
+          </li>
+          <li class="list-item">
+            <img src="images/icons/icons-delivery-home_delivery.svg">
+            <p class="text-partner text 5">Une <span>expédition fluide</span> de votre produit, d'oú qu'il vienne</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container-2">
+      <div class="title-box">
+      <hr class="title-orange-bar">
+      <h2 class="title-text">Et, concrètement,<br> comment ça marche?</h2>
+      </div>
+      <ul class="flexbox-2">
       <li>
-        <img src="/images/icons/Tracé 160.svg">
+        <img class="icons2" src="/images/icons/Tracé 160.svg">
         <div class="text-content">
           <p class="number">1</p>
-          <p>Vous reconnaîtrez les articles de nos partenaires grâce au symbol et l'appelation "vendu par" sur les fiches produits</p>
+          <p class="text">Vous reconnaîtrez les articles de nos partenaires grâce au symbol et l'appelation "vendu par" sur les fiches produits</p>
         </div>
       </li>
       <li>
-        <img src="images/icons/icons-standard-cart.svg">
+        <img class="icons2" src="images/icons/icons-standard-cart.svg">
         <div class="text-content">
           <p class="number">2</p>
-          <p>Vous pourrez les sélectionner en même temps que tout autre produit dans un seul et même panier
+          <p class="text">Vous pourrez les sélectionner en même temps que tout autre produit dans un seul et même panier
           </p>
         </div>
       </li>
       <li>
-        <img src="images/icons/icons-delivery-purchase-1.svg">
+        <img class="icons2" src="images/icons/icons-delivery-purchase-1.svg">
         <div class="text-content">
           <p class="number">3</p>
-          <p>Vous sélectionnez votre mode de livraison</p>
+          <p class="text">Vous sélectionnez votre mode de livraison</p>
         </div>
       </li>
       <li>
-        <img src="images/icons/icons-payment-secured_payment.svg">
+        <img class="icons2" src="images/icons/icons-payment-secured_payment.svg">
         <div class="text-content">
           <p class="number">4</p>
-          <p>Vous finalisez votre commande en toute sécurité et par une seule et même transaction</p>
+          <p class="text">Vous finalisez votre commande en toute sécurité et par une seule et même transaction</p>
         </div>
       </li>
       <li>
-        <img src="images/icons/Groupe 134.svg">
+        <img class="icons2" src="images/icons/Groupe 134.svg">
         <div class="text-content">
           <p class="number">5</p>
-          <p>Vous recevez un mail récapitulatif de votre commande avec les modalités de livraison</p>
+          <p class="text">Vous recevez un mail récapitulatif de votre commande avec les modalités de livraison</p>
         </div>
       </li>
-    </ul>
+      </ul>
+    </div>
   </body>
 </html>
