--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
       </div>
       <div class="item-2">
-          <ul>
+          <ul class="flexbox">
             <li class="list-item">
               <img src="images/icons/icons-services-badge.svg">
               <p class="text-partner text1">Des <span>partenaires de confiance</span> qui respectent nos valeurs</p>
@@ -56,7 +56,7 @@
         <h2 class="title-text">Et, concrètement,<br> comment ça marche?</h2>
       </div>
       <div class= "item-4">
-        <ul class="flexbox">
+        <ul class="flexbox2">
         <li class= "list-item1">
           <div class="text-content">
             <p class="number">1</p>
