--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>Spécialement pour vous, nous avons choisi les meilleurs marques partenaires<br> afin de vous proposer une offre de qualité illimitée.</h2>
         </div>
     </header>
-    <div class="grid-container">
+    <div class="container">
       <div class="item-1">
           <div class="titlebox">
             <hr  class="title-orangebar">
@@ -29,61 +29,64 @@
       </div>
       <div class="item-2">
           <ul class="flexbox">
-            <li class="list-item">
-              <img src="images/icons/icons-services-badge.svg">
-              <p class="text-partner text1">Des <span>partenaires de confiance</span> qui respectent nos valeurs</p>
+            <li class="list-item1">
+              <p class="text-partner">Des <span>partenaires de confiance</span> qui respectent nos valeurs</p>
             </li>
-            <li class="list-item">
-              <img src="images/icons/icons-delivery-purchase.svg">
-              <p class="text-partner text 2">Des partenaires proposant <span>leurs produits sur notre site web</span> et qui font partie intégrante de notre offre</p>
+            <li class="list-item2">
+              <p class="text-partner">Des partenaires proposant <span>leurs produits sur notre site web</span><br> et qui font partie intégrante de notre offre</p>
             </li>
-            <li class="list-item">
-              <img src="images/icons/Groupe 155.svg">
-              <p class="text-partner text 3"><span>Un service client toujours au rendez-vous</span>, et qui reste votre point de contact unique, peu importe la provenance du produit</p>
+            <li class="list-item3">
+              <p class="text-partner">
+                <span>Un service client toujours au rendez-vous</span>, et qui reste votre point<br> de contact unique, peu importe la provenance du produit</p>
             </li>
-            <li class="list-item">
-              <img src="images/icons/icons-payment-payment.svg">
-              <p class="text-partner text 4">Des achats en une seule et <span>même transaction</span></p>
+            <li class="list-item4">
+              <p class="text-partner">Des achats en une seule et <span>même transaction</span></p>
             </li>
-            <li class="list-item">
-              <img src="images/icons/icons-delivery-home_delivery.svg">
-              <p class="text-partner text 5">Une <span>expédition fluide</span> de votre produit, d'oú qu'il vienne</p>
+            <li class="list-item5">
+              <p class="text-partner">Une <span>expédition fluide</span> de votre produit, d'oú qu'il vienne</p>
             </li>
           </ul>
-      </div>   
+      </div> 
+    </div>
+    <div class="container2">  
       <div class="item-3">
         <hr class="title-orange-bar">
         <h2 class="title-text">Et, concrètement,<br> comment ça marche?</h2>
       </div>
       <div class= "item-4">
         <ul class="flexbox2">
-        <li class= "list-item1">
+        <li class= "list-itemA">
           <div class="text-content">
+            <img src="images/icons/Tracé 160.svg">
             <p class="number">1</p>
             <p class="text">Vous reconnaîtrez les articles de nos partenaires grâce au symbol et l'appelation "vendu par" sur les fiches produits</p>
           </div>
         </li>
-        <li class= "list-item2">
+        <li class= "list-itemB">
           <div class="text-content">
+            <img src="images/icons/icons-standard-cart.svg">
             <p class="number">2</p>
             <p class="text">Vous pourrez les sélectionner en même temps que tout autre produit dans un seul et même panier
             </p>
           </div>
         </li>
-        <li class= "list-item3">
+        <li class= "list-itemC">
           <div class="text-content">
+            <img src="images/icons/icons-delivery-purchase-1.svg">
             <p class="number">3</p>
             <p class="text">Vous sélectionnez votre mode de livraison</p>
           </div>
         </li>
-        <li class= "list-item4">
+        <li class= "list-itemD">
           <div class="text-content">
+            <img src="images/icons/icons-payment-secured_payment.svg">
             <p class="number">4</p>
             <p class="text">Vous finalisez votre commande en toute sécurité et par une seule et même transaction</p>
           </div>
         </li>
-        <li class= "list-item5">
+        <li class= "list-itemE">
           <div class="text-content">
+            <img src="images/icons/Groupe 134.svg">
             <p class="number">5</p>
             <p class="text">Vous recevez un mail récapitulatif de votre commande avec les modalités de livraison</p>
           </div>
