Adapt media. queries

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing-Test</title>
+    <title>Case 1 : Landing</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" type="image/jpg" href="images/RjfrOKML_400x400.jpg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
