Adapt header image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-        <img class="background" src="/images/QUECHUA ATHMOSPHERE   SOCIAL MEDIA  NEWSLETTER  ADVICES.jpg" alt="Deux personnes marchant dans la nature">
+        <img class="background" src="images/QUECHUA ATHMOSPHERE   SOCIAL MEDIA  NEWSLETTER  ADVICES.jpg" alt="Deux personnes marchant dans la nature">
         <div class="header-text">
           <h1>Un chois infini grâce à Decathlon Partner!</h1>
           <h2>Spécialement pour vous, nous avons choisi les meilleurs marques partenaires<br> afin de vous proposer une offre de qualité illimitée.</h2>
